Update code lan1

--- a/src/main/resources/templates/client/Home.html
+++ b/src/main/resources/templates/client/Home.html
@@ -3,10 +3,10 @@
       th:replace="~{/layout/client/IndexClient :: dynamic(~{:: main})}">
 <body>
 <main>
-    <div style="max-width: 1300px;margin: auto;padding-left: 25px;padding-right: 25px;">
-        <div style="display: flex;align-items: center;flex-wrap: wrap;justify-content: space-around;">
-            <div style="flex-basis: 50%;min-width: 300px;">
-                <h1 style="font-size: 50px;line-height: 60px;margin: 25px 0;">Gives you confidence with everyone <br> A
+    <div style="max-width: 1300px; margin: auto; padding-left: 25px; padding-right: 25px; height: 660px;">
+        <div style="display: flex; align-items: center; flex-wrap: wrap; justify-content: space-around;">
+            <div style="flex-basis: 50%; min-width: 300px;">
+                <h1 style="font-size: 50px; line-height: 60px; margin: 25px 0;">Gives you confidence with everyone <br> A
                     New Style!</h1>
                 <p>Don't follow trends. Don't make yourself dependent on fashion. <br>
                     Let yourself be the one to decide what you will wear and how you will live.
@@ -16,7 +16,7 @@
                     Now &#8594;</a>
             </div>
             <div style="flex-basis: 50%;min-width: 300px;">
-                <img th:src="@{|/images/layout/banner.png|}" alt="" style="height: 350px;margin-left: 115px;">
+                <img th:src="@{|/images/layout/banner.png|}" alt="" style="height: 350px; margin-left: 115px;">
             </div>
         </div>
     </div>
