--- a/src/main/resources/templates/layout/login/IndexLogin.html
+++ b/src/main/resources/templates/layout/login/IndexLogin.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css}"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{|/css/login/Style.css|}">
     <link rel="shortcut icon" th:href="@{|/images/layout/favicon.png|}"/>
@@ -21,10 +21,10 @@
             <div class="featured-image mb-3">
                 <img th:src="@{|/images/layout/logoMangoStore.png|}" class="img-fluid" style="width: 250px;" alt="">
             </div>
-            <p class="text-white fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600;">Mango
+            <p class="text-white fs-2" style="font-family:'Courier New', Courier, monospace; font-weight: 600;">Mango
                 Store</p>
             <small class="text-white text-wrap text-center"
-                   style="width: 17rem;font-family: 'Courier New', Courier, monospace;">Join experienced Designers on
+                   style="width: 17rem; font-family: 'Courier New', Courier, monospace;">Join experienced Designers on
                 this platform.</small>
         </div>
 
