commit voucher done successfully

--- a/src/main/resources/templates/layout/admin/IndexAdmin.html
+++ b/src/main/resources/templates/layout/admin/IndexAdmin.html
@@ -74,5 +74,8 @@
 <script th:src="@{|/javascript/admin/FormatInput.js|}"></script>
 <script th:src="@{|/javascript/admin/FormatMoney.js|}"></script>
 <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js}"></script>
+<script th:src="@{|/javascript/admin/Voucher.js|}"></script>
+<script th:src="@{|/javascript/admin/Rank.js|}"></script>
+
 </body>
 </html>
