--- a/src/main/resources/templates/layout/admin/IndexAdmin.html
+++ b/src/main/resources/templates/layout/admin/IndexAdmin.html
@@ -78,6 +78,8 @@
 <script th:src="@{|/javascript/admin/FormatMoney.js|}"></script>
 <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js}"></script>
 <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js}"></script>
+<script th:src="@{|/javascript/admin/Voucher.js|}"></script>
+<script th:src="@{|/javascript/admin/Rank.js|}"></script>
 
 <script th:src="@{|/javascript/admin/CreateInvoice.js|}"></script>
 <script th:src="@{|/javascript/admin/DetailSell.js|}"></script>
