--- a/src/main/resources/templates/layout/admin/IndexAdmin.html
+++ b/src/main/resources/templates/layout/admin/IndexAdmin.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" th:href="@{|/css/admin/checkbox.css|}">
     <link rel="stylesheet" th:href="@{|/css/admin/button.css|}">
     <link rel="stylesheet" th:href="@{|/css/message/ImportAlert2.css|}">
+    <link rel="stylesheet" th:href="@{|/css/admin/ImagesActive.css|}">
+    <link rel="stylesheet" th:href="@{|/css/admin/Select2.css|}">
     <link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css}" rel="stylesheet"/>
 </head>
 
@@ -73,6 +75,12 @@
 
 <script th:src="@{|/javascript/admin/FormatInput.js|}"></script>
 <script th:src="@{|/javascript/admin/FormatMoney.js|}"></script>
+<script th:src="@{|/javascript/admin/Select2.js|}"></script>
 <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js}"></script>
+<script th:src="@{|/javascript/admin/AddProduct.js|}"></script>
+<script th:src="@{|/javascript/admin/AddProductDetail.js|}"></script>
+<script th:src="@{|/javascript/admin/ConfirmManagement.js|}"></script>
+<script th:src="@{|/javascript/admin/ProductDetail.js|}"></script>
+
 </body>
 </html>
