--- a/src/main/resources/templates/admin/Product/DetailProduct.html
+++ b/src/main/resources/templates/admin/Product/DetailProduct.html
@@ -44,7 +44,7 @@
                                             <label class="form-label">CodeProduct</label>
                                             <input type="text"
                                                    class="form-control"
-                                                   name="codeProduct" th:field="*{codeProduct}" readonly/>
+                                                   id="codeProduct" name="codeProduct" th:field="*{codeProduct}" readonly/>
                                         </div>
                                     </div>
                                     <div class="col-md-9">
