--- a/src/main/resources/templates/layout/admin/IndexAdmin.html
+++ b/src/main/resources/templates/layout/admin/IndexAdmin.html
@@ -73,6 +73,10 @@
 
 <script th:src="@{|/javascript/admin/FormatInput.js|}"></script>
 <script th:src="@{|/javascript/admin/FormatMoney.js|}"></script>
+<script th:src="@{|/javascript/admin/AddAccount.js|}"></script>
+<script th:src="@{|/javascript/admin/AddAddress.js|}"></script>
+<script th:src="@{|/javascript/admin/AddRole.js|}"></script>
+<script th:src="@{|/javascript/admin/checkUpdateAuthentication.js|}"></script>
 <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js}"></script>
 </body>
 </html>
