--- a/src/main/resources/templates/admin/Order/OrderList.html
+++ b/src/main/resources/templates/admin/Order/OrderList.html
@@ -11,6 +11,15 @@
     <div class="col-lg-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
+                <div class="d-flex">
+                    <h5 class="card-title me-3" style="margin-top: 8px;">Tìm kiếm hóa đơn theo mã: </h5>
+                    <form>
+                        <div class="form-group">
+                            <input type="text" name="findByCode" class="form-control" th:value="${findByCode}"
+                                   placeholder="Nhập mã hóa đơn" style="width: 500px;">
+                        </div>
+                    </form>
+                </div>
                 <h4 class="card-title">List Invoice</h4>
                 <div class="table-responsive">
                     <div class="header">
