--- a/src/main/resources/templates/layout/admin/IndexAdmin.html
+++ b/src/main/resources/templates/layout/admin/IndexAdmin.html
@@ -92,5 +92,9 @@
 <script th:src="@{|/javascript/admin/DetailSell.js|}"></script>
 <script th:src="@{|/javascript/admin/DetailInvoice.js|}"></script>
 <script th:src="@{|/javascript/admin/UpdateInvoiceStatus.js|}"></script>
+
+<script th:src="@{|/javascript/admin/AddAccount.js|}"></script>
+<script th:src="@{|/javascript/admin/AddRole.js|}"></script>
+<script th:src="@{|/javascript/admin/checkUpdateAuthentication.js|}"></script>
 </body>
 </html>
