--- a/src/main/resources/templates/login/NewPassword.html
+++ b/src/main/resources/templates/login/NewPassword.html
@@ -2,27 +2,27 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
       th:replace="~{/layout/login/IndexLogin :: dynamic(~{:: main})}">
 <body>
-<main>
+<main class="SetPasswordPage">
     <div class="row align-items-center">
         <div class="header-text mb-4">
             <h2>Đặt mật khẩu</h2>
             <p>Vui lòng đặt mật khẩu để sử dụng website.</p>
         </div>
-        <form th:action="@{/mangostore/login/refresh/success}" method="post">
+        <form id="formSetPassword" th:action="@{/mangostore/login/refresh/success}" method="post">
             <div class="input-group mb-3">
                 <input type="text" class="form-control form-control-lg bg-light fs-6" name="email"
-                       placeholder="Nhập Email" th:value="${session.loginEmailForgot}" readonly>
+                       placeholder="Nhập Email" th:value="${session.loginEmailForgot}" readonly disabled>
             </div>
             <div class="input-group mb-3">
                 <input type="password" class="form-control form-control-lg bg-light fs-6" name="passwordRefresh"
-                       placeholder="Nhập mật khẩu">
+                       id="passwordInput" placeholder="Nhập mật khẩu">
             </div>
             <div class="input-group mb-3">
                 <input type="password" class="form-control form-control-lg bg-light fs-6" name="passwordRefreshRE"
-                       placeholder="Nhập lại mật khẩu">
+                       id="passwordConfirm" placeholder="Nhập lại mật khẩu">
             </div>
             <div class="input-group mb-3">
-                <button type="submit" class="btn btn-lg btn-primary w-100 fs-6">Gửi</button>
+                <button type="button" onclick="setPassword()" class="btn btn-lg btn-primary w-100 fs-6">Hoàn thành</button>
             </div>
         </form>
     </div>
