--- a/src/main/resources/templates/layout/login/IndexLogin.html
+++ b/src/main/resources/templates/layout/login/IndexLogin.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css}"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{|/css/login/Style.css|}">
+    <link rel="stylesheet" th:href="@{|/css/message/ImportAlert2.css|}">
     <link rel="shortcut icon" th:href="@{|/images/layout/favicon.png|}"/>
     <title>Login</title>
 </head>
@@ -32,6 +33,13 @@
         </div>
     </div>
 </div>
+<script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js}"></script>
+<script th:src="@{|/javascript/message/ImportAlert2.js|}"></script>
+<script th:src="@{|/javascript/message/GenderAlert.js|}"></script>
+<script th:src="@{|/javascript/login/Login.js|}"></script>
+<script th:src="@{|/javascript/login/Register.js|}"></script>
+<script th:src="@{|/javascript/login/ForgotPassword.js|}"></script>
+<script th:src="@{|/javascript/login/SetPassword.js|}"></script>
 </body>
 
 </html>
