--- a/src/main/resources/templates/client/Home.html
+++ b/src/main/resources/templates/client/Home.html
@@ -4,14 +4,45 @@
 <body>
 <main>
     <div style="max-width: 1300px; margin: auto; padding-left: 25px; padding-right: 25px; height: 660px;">
+<!--        <div id="suKien" class="carousel slide" data-bs-ride="carousel">-->
+<!--            <div class="carousel-indicators">-->
+<!--                <button type="button" data-bs-target="#suKien" data-bs-slide-to="0" class="active"></button>-->
+<!--                <button type="button" data-bs-target="#suKien" data-bs-slide-to="1"></button>-->
+<!--                <button type="button" data-bs-target="#suKien" data-bs-slide-to="2"></button>-->
+<!--            </div>-->
+
+<!--            <div class="carousel-inner">-->
+<!--                <div class="carousel-item active">-->
+<!--                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrUX2N3N_6XkgZ3eya3juV3CR_CEpgJHJQ3miw8Jz2h0n0mSj-ysml1PJCbu-TRAecuJ4&usqp=CAU"-->
+<!--                         alt="Los Angeles" class="d-block" style="width:100%; height: 250px;">-->
+<!--                </div>-->
+<!--                <div class="carousel-item">-->
+<!--                    <img src="https://vietadv.vn/wp-content/uploads/2019/03/mau-quang-cao.jpg"-->
+<!--                         alt="Chicago" class="d-block" style="width:100%; height: 250px;">-->
+<!--                </div>-->
+<!--                <div class="carousel-item">-->
+<!--                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjTruEsH2g2zrcdZxxla26XReOP4LqEqbHntVMFlsTUE-qBjWPXkGh_81nehLLhqNoyFQ&usqp=CAU"-->
+<!--                         alt="New York" class="d-block" style="width:100%; height: 250px;">-->
+<!--                </div>-->
+<!--            </div>-->
+
+<!--            <button class="carousel-control-prev" type="button" data-bs-target="#suKien" data-bs-slide="prev">-->
+<!--                <span class="carousel-control-prev-icon"></span>-->
+<!--            </button>-->
+<!--            <button class="carousel-control-next" type="button" data-bs-target="#suKien" data-bs-slide="next">-->
+<!--                <span class="carousel-control-next-icon"></span>-->
+<!--            </button>-->
+<!--        </div>-->
         <div style="display: flex; align-items: center; flex-wrap: wrap; justify-content: space-around;">
             <div style="flex-basis: 50%; min-width: 300px;">
-                <h1 style="font-size: 50px; line-height: 60px; margin: 25px 0;">Giúp bạn tự tin với mọi người <br> Một phong cách mới!</h1>
+                <h1 style="font-size: 50px; line-height: 60px; margin: 25px 0;">Giúp bạn tự tin với mọi người <br> Một
+                    phong cách mới!</h1>
                 <p>Đừng chạy theo xu hướng. Đừng khiến mình phụ thuộc vào thời trang. <br>
                     Hãy để bản thân là người quyết định bạn sẽ mặc gì và sống như thế nào.
                 </p>
                 <a th:href="@{/mangostore/product}"
-                   style="display: inline-block; background: #ff523b; color: #fff; padding: 8px 30px; margin: 30px 0; border-radius: 30px; transition: background 0.5s; text-decoration: none">Khám phá ngay &#8594;</a>
+                   style="display: inline-block; background: #ff523b; color: #fff; padding: 8px 30px; margin: 30px 0; border-radius: 30px; transition: background 0.5s; text-decoration: none">Khám
+                    phá ngay &#8594;</a>
             </div>
             <div style="flex-basis: 50%;min-width: 300px;">
                 <img th:src="@{|/images/layout/banner.png|}" alt="" style="height: 350px; margin-left: 115px;">
